  mallocstrcpy which is sure to be a programmatic nightmare, changed
  last_search, last_replace, answer to pointers.  New function
  not_found_msg in search.c for displaying truncated strings in satusbar
  when the string is not found.

  *** Note that backspace key makes input be off by one when entring
  *** a string > COLS in length.  This must be fixed before a new release

- global.c
	- New global replace_list_2, for 2nd half of the replace dialog
	  ("Replace with:"), has fewer options than first half because
	  they were inapropriate.  
  toggle_init()
	- Added #ifdef around toggle_regex_msg to get rid of compiler 
	  warning.
- search.c
  findnexstr()
	- New arg for begin_x variable, basically a rewrite that
	  makes a little more sense and isn't quite as messy (Rocco Corsi).
	- Update the line we're checking if not the whole screen, because
	  it's quite possible the search team could exist somewhere way
	  to the right on the same line, for example.
  replace_abort()
	- Add reset of placewewant, stops cursor from jumping when moving
	  cursor after a replace.
  do_replace()
	- Added code for Gotoline key after entering the search term.
	  Fixes bug #46.
	- Removed redundant code involving processing replacemenet string.
	  Converted if statements to switch statements.
	- Optimizations by Rocco Corsi.
	- Removed code for deleted shortcuts from in replace_list_2.
  do_search()
	- Converted if statements to one switch statement.
- winio.c
  nanogetstr()
	- Added check for 343 in while loop to get rid of getting "locked"
	  into statusbar" bug in odd $TERMs like iris-ansi.
	- Changed check to return -2 on "enter" from answer == ""
	  to answer == def.
  nanoget_repaint()
	- New function, removes about 30 lines of duplicate code in 
	  nanogetstr().
- es.po:
	- Updated translation to 0.9.19-CVS (Jordi).
  
nano 0.9.19 - 10/02/2000
- General
	- Added PDCurses support under cygwin, which allows building