@@ -14,7 +14,9 @@ CVS Code -
 
   *** Note that backspace key makes input be off by one when entring
   *** a string > COLS in length.  This must be fixed before a new release
-
+- files.c:
+  do_writeout()
+	- Change strcpy to answer to mallocstrcpy.
 - global.c
 	- New global replace_list_2, for 2nd half of the replace dialog
 	  ("Replace with:"), has fewer options than first half because
